Add query api
